--- a/EDA.qmd
+++ b/EDA.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Final Project: Diabetic Dataset Analysys"
+title: "Final Project: Diabetic Dataset Analysis"
 author: "Upendra Joshi"
 format: html
 editor: visual
@@ -302,6 +302,8 @@ The proportion of individuals who consume vegetables is lower among those with d
 This finding suggests a weak to moderate association between not consuming vegetables and a higher prevalence of diabetes. The difference in the proportion of vegetable consumers between the diabetes and non-diabetes groups (12.99% vs 18.00%) is somewhat larger than for fruit consumption, but still less substantial than the association seen with physical activity.
 
 ###Overall Summary:
+
+
 The analyses reveal several key factors associated with diabetes prevalence in this dataset. Age, education, income, BMI, and physical activity all show significant relationships with diabetes risk.
 Diabetes prevalence increases markedly with age and is highest among those with the lowest education and income levels. Higher BMI and physical inactivity are also strongly associated with increased diabetes prevalence.
 Males appear to have a slightly higher risk of diabetes compared to females, though the difference is not as pronounced as for the other factors examined.
